// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleSwitch /> should match snapshots 1`] = `
<div>
  <Tooltip
    active={false}
    id="inline-toggle"
    text="Test 1"
    transform=""
  />
  <input
    aria-checked={false}
    aria-describedby="inline-toggle"
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-checked={false}
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="checkbox"
  />
  <style
    jsx={true}
  >
    
                        input {
                            opacity: 0 !important;
                            pointer-events: none;
                            position: absolute;
                            z-index: 1;
                        }
                        span {
                            position: relative;
                            display: block;
                            margin: 5px;
                            height: 20px;
                            width: 44px;
                            background: #898989;
                            border-radius: 100px;
                            cursor: pointer;
                            transition: all 0.3s ease;
                        }
                        span:after {
                            position: absolute;
                            left: -2px;
                            top: -3px;
                            display: block;
                            width: 26px;
                            height: 26px;
                            border-radius: 100px;
                            background: #fff;
                            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            content: '';
                            transition: all 0.3s ease;
                        }
                        span:active:after {
                            -webkit-transform: scale(1.15, 0.85);
                            transform: scale(1.15, 0.85);
                        }
                        input:checked + span {
                            background: #6f9eb1;
                        }
                        input:checked + span:after {
                            left: 20px;
                            background: #0085ba;
                        }
                        input:disabled + span {
                            background: #d5d5d5;
                            pointer-events: none;
                        }
                        input:disabled + span:after {
                            background: #bcbdbc;
                        }
                        input:disabled:checked + span {
                            background: #6f9eb1;
                            opacity: 0.7;
                        }
                        input:disabled:checked + span:after {
                            background: #0085ba;
                            opacity: 0.7;
                        }
                        input:focus + span {
                            outline: 1.1px auto rgba(19, 124, 189, 0.5);
                            outline-width: 1.1px;
                            outline-style: solid;
                            outline-offset: 5px;
                            transition: none;
                        }
                    
  </style>
</div>
`;

exports[`<ToggleSwitch /> should match snapshots 2`] = `
<div>
  <Tooltip
    active={false}
    id="inline-toggle"
    text="Test 2"
    transform=""
  />
  <input
    aria-checked={true}
    aria-describedby="inline-toggle"
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <span
    aria-checked={true}
    onClick={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    role="checkbox"
  />
  <style
    jsx={true}
  >
    
                        input {
                            opacity: 0 !important;
                            pointer-events: none;
                            position: absolute;
                            z-index: 1;
                        }
                        span {
                            position: relative;
                            display: block;
                            margin: 5px;
                            height: 20px;
                            width: 44px;
                            background: #898989;
                            border-radius: 100px;
                            cursor: pointer;
                            transition: all 0.3s ease;
                        }
                        span:after {
                            position: absolute;
                            left: -2px;
                            top: -3px;
                            display: block;
                            width: 26px;
                            height: 26px;
                            border-radius: 100px;
                            background: #fff;
                            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
                            content: '';
                            transition: all 0.3s ease;
                        }
                        span:active:after {
                            -webkit-transform: scale(1.15, 0.85);
                            transform: scale(1.15, 0.85);
                        }
                        input:checked + span {
                            background: #6f9eb1;
                        }
                        input:checked + span:after {
                            left: 20px;
                            background: #0085ba;
                        }
                        input:disabled + span {
                            background: #d5d5d5;
                            pointer-events: none;
                        }
                        input:disabled + span:after {
                            background: #bcbdbc;
                        }
                        input:disabled:checked + span {
                            background: #6f9eb1;
                            opacity: 0.7;
                        }
                        input:disabled:checked + span:after {
                            background: #0085ba;
                            opacity: 0.7;
                        }
                        input:focus + span {
                            outline: 1.1px auto rgba(19, 124, 189, 0.5);
                            outline-width: 1.1px;
                            outline-style: solid;
                            outline-offset: 5px;
                            transition: none;
                        }
                    
  </style>
</div>
`;
